--- a/bibliography.bib
+++ b/bibliography.bib
@@ -17,7 +17,7 @@
 	issn         = {01680072},
 	url          = {https://linkinghub.elsevier.com/retrieve/pii/S0168007212000346},
 	urldate      = {2024-02-24},
-	abstract     = {Total {NP} search problems ({TFNP} problems) typically have their totality guaranteed by some combinatorial property. This paper proves that, if there is a polynomial time Turing reduction between two {TFNP} problems, then there are quasipolynomial size, polylogarithmic height, constant depth, free-cut free propositional (Frege) proofs of the combinatorial property associated with the first {TFNP} problem from the property associated with the second problem. In addition, they have Nullstellensatz derivations of polylogarithmic degree. These results extend the previous work of Buresh-Oppenheim and Morioka first by applying to Turing reductions in place of many-one reductions and second by giving tight bounds on the height of the Frege proofs. As a corollary, {PLScomplete} problems are not polynomial time Turing reducible to {PPA} problems relative to a generic oracle. We establish a converse construction as well, by showing that a polynomial time Turing reduction can be obtained from a family of quasipolynomial size, polylogarithmic depth, propositional proofs which are based on ``decision tree'' substitutions. This establishes the optimality of our constructions, and partially resolves an open question posed by Buresh-Oppenheim and Morioka.},
+	abstract     = {Total {NP} search problems ({TFNP} problems) typically have their totality guaranteed by some combinatorial property. This paper proves that, if there is a polynomial time Turing reduction between two {TFNP} problems, then there are quasipolynomial size, polylogarithmic height, constant depth, free-cut free propositional (Frege) proofs of the combinatorial property associated with the first {TFNP} problem from the property associated with the second problem. In addition, they have Nullstellensatz derivations of polylogarithmic degree. These results extend the previous work of Buresh-Oppenheim and Morioka first by applying to Turing reductions in place of many-one reductions and second by giving tight bounds on the height of the Frege proofs. As a corollary, {PLScomplete} problems are not polynomial time Turing reducible to {PPA} problems relative to a generic oracle. We establish a converse construction as well, by showing that a polynomial time Turing reduction can be obtained from a family of quasipolynomial size, polylogarithmic depth, propositional proofs which are based on ‘‘decision tree’’ substitutions. This establishes the optimality of our constructions, and partially resolves an open question posed by Buresh-Oppenheim and Morioka.},
 	journaltitle = {Annals of Pure and Applied Logic},
 	shortjournal = {Annals of Pure and Applied Logic},
 	date         = {2012-09},
@@ -25,25 +25,25 @@
 	file         = {Buss and Johnson - 2012 - Propositional proofs and reductions between NP sea.pdf:/home/nils/Zotero/storage/ECL6XVI2/Buss and Johnson - 2012 - Propositional proofs and reductions between NP sea.pdf:application/pdf}
 }
 @article{etessami_tarskis_2020,
-	title        = {Tarski's Theorem, Supermodular Games, and the Complexity of Equilibria},
+	title        = {Tarski’s Theorem, Supermodular Games, and the Complexity of Equilibria},
 	author       = {Etessami, Kousha and Papadimitriou, Christos and Rubinstein, Aviad and Yannakakis, Mihalis},
 	doi          = {10.4230/LIPICS.ITCS.2020.18},
 	issn         = {1868-8969},
 	url          = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ITCS.2020.18},
 	urldate      = {2024-02-24},
 	rights       = {Creative Commons Attribution 3.0 Unported license, info:eu-repo/semantics/{openAccess}},
-	abstract     = {The use of monotonicity and Tarski's theorem in existence proofs of equilibria is very widespread in economics, while Tarski's theorem is also often used for similar purposes in the context of verification. However, there has been relatively little in the way of analysis of the complexity of finding the fixed points and equilibria guaranteed by this result. We study a computational formalism based on monotone functions on the d-dimensional grid with sides of length N , and their fixed points, as well as the closely connected subject of supermodular games and their equilibria. It is known that finding some (any) fixed point of a monotone function can be done in time logd N , and we show it requires at least log2 N function evaluations already on the 2-dimensional grid, even for randomized algorithms. We show that the general Tarski problem of finding some fixed point, when the monotone function is given succinctly (by a boolean circuit), is in the class {PLS} of problems solvable by local search and, rather surprisingly, also in the class {PPAD}. Finding the greatest or least fixed point guaranteed by Tarski's theorem, however, requires d \cdot{} N steps, and is {NP}-hard in the white box model. For supermodular games, we show that finding an equilibrium in such games is essentially computationally equivalent to the Tarski problem, and finding the maximum or minimum equilibrium is similarly harder. Interestingly, two-player supermodular games where the strategy space of one player is one-dimensional can be solved in O(log N ) steps. We also show that computing (approximating) the value of Condon's (Shapley's) stochastic games reduces to the Tarski problem. An important open problem highlighted by this work is proving a \ensuremath{\Omega}(logd N ) lower bound for small fixed dimension d \geq{} 3.},
+	abstract     = {The use of monotonicity and Tarski’s theorem in existence proofs of equilibria is very widespread in economics, while Tarski’s theorem is also often used for similar purposes in the context of veriﬁcation. However, there has been relatively little in the way of analysis of the complexity of ﬁnding the ﬁxed points and equilibria guaranteed by this result. We study a computational formalism based on monotone functions on the d-dimensional grid with sides of length N , and their ﬁxed points, as well as the closely connected subject of supermodular games and their equilibria. It is known that ﬁnding some (any) ﬁxed point of a monotone function can be done in time logd N , and we show it requires at least log2 N function evaluations already on the 2-dimensional grid, even for randomized algorithms. We show that the general Tarski problem of ﬁnding some ﬁxed point, when the monotone function is given succinctly (by a boolean circuit), is in the class {PLS} of problems solvable by local search and, rather surprisingly, also in the class {PPAD}. Finding the greatest or least ﬁxed point guaranteed by Tarski’s theorem, however, requires d · N steps, and is {NP}-hard in the white box model. For supermodular games, we show that ﬁnding an equilibrium in such games is essentially computationally equivalent to the Tarski problem, and ﬁnding the maximum or minimum equilibrium is similarly harder. Interestingly, two-player supermodular games where the strategy space of one player is one-dimensional can be solved in O(log N ) steps. We also show that computing (approximating) the value of Condon’s (Shapley’s) stochastic games reduces to the Tarski problem. An important open problem highlighted by this work is proving a Ω(logd N ) lower bound for small ﬁxed dimension d ≥ 3.},
 	editora      = {Vidick, Thomas},
 	editoratype  = {collaborator},
 	date         = 2020,
 	langid       = {english},
-	keywords     = {computational complexity, fixed points, lattices, lower bounds, monotone functions, Nash equilibria, oracle model, {PLS}, {PPAD}, stochastic games, supermodular games, Tarski's theorem, Theory of computation \rightarrow{} Computational complexity and cryptography},
-	file         = {Etessami et al. - 2020 - Tarski's Theorem, Supermodular Games, and the Comp.pdf:/home/nils/Zotero/storage/DKKSJSLV/Etessami et al. - 2020 - Tarski's Theorem, Supermodular Games, and the Comp.pdf:application/pdf}
+	keywords     = {computational complexity, fixed points, lattices, lower bounds, monotone functions, Nash equilibria, oracle model, {PLS}, {PPAD}, stochastic games, supermodular games, Tarski’s theorem, Theory of computation → Computational complexity and cryptography},
+	file         = {Etessami et al. - 2020 - Tarski’s Theorem, Supermodular Games, and the Comp.pdf:/home/nils/Zotero/storage/DKKSJSLV/Etessami et al. - 2020 - Tarski’s Theorem, Supermodular Games, and the Comp.pdf:application/pdf}
 }
 @article{goos_further_2022,
 	title        = {Further Collapses in {TFNP}},
 	author       = {Goos, Mika and Hollender, Alexandros and Jain, Siddhartha and Maystre, Gilbert and Pires, William and Robere, Robert and Tao, Ran},
-	abstract     = {We show {EOPL} = {PLS} \cap{} {PPAD}. Here the class {EOPL} consists of all total search problems that reduce to the End-of-Potential-Line problem, which was introduced in the works by Huba\textasciiacute{}\textasciicaron{}cek and Yogev ({SICOMP} 2020) and Fearnley et al. ({JCSS} 2020). In particular, our result yields a new simpler proof of the breakthrough collapse {CLS} = {PLS} \cap{} {PPAD} by Fearnley et al. ({STOC} 2021). We also prove a companion result {SOPL} = {PLS} \cap{} {PPADS}, where {SOPL} is the class associated with the Sink-of-Potential-Line problem.},
+	abstract     = {We show {EOPL} = {PLS} ∩ {PPAD}. Here the class {EOPL} consists of all total search problems that reduce to the End-of-Potential-Line problem, which was introduced in the works by Huba´ˇcek and Yogev ({SICOMP} 2020) and Fearnley et al. ({JCSS} 2020). In particular, our result yields a new simpler proof of the breakthrough collapse {CLS} = {PLS} ∩ {PPAD} by Fearnley et al. ({STOC} 2021). We also prove a companion result {SOPL} = {PLS} ∩ {PPADS}, where {SOPL} is the class associated with the Sink-of-Potential-Line problem.},
 	date         = 2022,
 	langid       = {english},
 	file         = {Goos et al. - Further Collapses in TFNP.pdf:/home/nils/Zotero/storage/KRDG4T2P/Goos et al. - Further Collapses in TFNP.pdf:application/pdf}
@@ -55,7 +55,7 @@
 	number       = {{arXiv}:1804.03450},
 	url          = {http://arxiv.org/abs/1804.03450},
 	urldate      = {2024-03-02},
-	abstract     = {We introduce the problem {EndOfPotentialLine} and the corresponding complexity class {EOPL} of all problems that can be reduced to it in polynomial time. This class captures problems that admit a single combinatorial proof of their joint membership in the complexity classes {PPAD} of fixpoint problems and {PLS} of local search problems. {EOPL} is a combinatorially-defined alternative to the class {CLS} (for Continuous Local Search), which was introduced in [16] with the goal of capturing the complexity of some well-known problems in {PPAD} \cap{} {PLS} that have resisted, in some cases for decades, attempts to put them in polynomial time. Two of these are Contraction, the problem of finding a fixpoint of a contraction map, and P-{LCP}, the problem of solving a P-matrix Linear Complementarity Problem.},
+	abstract     = {We introduce the problem {EndOfPotentialLine} and the corresponding complexity class {EOPL} of all problems that can be reduced to it in polynomial time. This class captures problems that admit a single combinatorial proof of their joint membership in the complexity classes {PPAD} of ﬁxpoint problems and {PLS} of local search problems. {EOPL} is a combinatorially-deﬁned alternative to the class {CLS} (for Continuous Local Search), which was introduced in [16] with the goal of capturing the complexity of some well-known problems in {PPAD} ∩ {PLS} that have resisted, in some cases for decades, attempts to put them in polynomial time. Two of these are Contraction, the problem of ﬁnding a ﬁxpoint of a contraction map, and P-{LCP}, the problem of solving a P-matrix Linear Complementarity Problem.},
 	date         = {2018-04-18},
 	langid       = {english},
 	eprinttype   = {arxiv},
@@ -126,7 +126,7 @@
 	title        = {The Complexity Class Unique End of Potential Line},
 	author       = {Borzechowski, Michaela},
 	url          = {https://www.mi.fu-berlin.de/inf/groups/ag-ti/theses/download/Borzechowski21.pdf},
-	institution  = {Freien Universit\"{a}t Berlin},
+	institution  = {Freien Universität Berlin},
 	type         = {phdthesis},
 	date         = 2021,
 	langid       = {english},
@@ -239,7 +239,7 @@
 	volume       = 3,
 	edition      = {4th},
 	date         = 1997,
-	keywords     = {Algorithmus, {LEHRB\"{U}CHER} ({DOKUMENTENTYP}), {PROGRAMME} {UND} {ALGORITHMEN} {ZUR} {L\"{O}SUNG} {SPEZIELLER} {PROBLEME}, Programmierung, {SEMANTIK} {VON} {PROGRAMMIERSPRACHEN} + {SYNTAX} {VON} {PROGRAMMIERSPRACHEN}, {THEORIE} {DER} {PROGRAMMIERUNG}}
+	keywords     = {Algorithmus, {LEHRBÜCHER} ({DOKUMENTENTYP}), {PROGRAMME} {UND} {ALGORITHMEN} {ZUR} {LÖSUNG} {SPEZIELLER} {PROBLEME}, Programmierung, {SEMANTIK} {VON} {PROGRAMMIERSPRACHEN} + {SYNTAX} {VON} {PROGRAMMIERSPRACHEN}, {THEORIE} {DER} {PROGRAMMIERUNG}}
 }
 @article{fearnley_unique_2020,
 	title        = {Unique end of potential line},
@@ -254,7 +254,7 @@
 	shortjournal = {Journal of Computer and System Sciences},
 	date         = {2020-12},
 	langid       = {english},
-	file         = {Ferney\_UEOPL.pdf:/home/nils/Zotero/storage/LYIERPZQ/Ferney\_UEOPL.pdf:application/pdf;Full Text:/home/nils/Zotero/storage/6S9QIKWP/Fearnley et al. - 2020 - Unique end of potential line.pdf:application/pdf}
+	file         = {Ferney_UEOPL.pdf:/home/nils/Zotero/storage/LYIERPZQ/Ferney_UEOPL.pdf:application/pdf;Full Text:/home/nils/Zotero/storage/6S9QIKWP/Fearnley et al. - 2020 - Unique end of potential line.pdf:application/pdf}
 }
 @article{freudenthal_simplizialzerlegungen_1942,
 	title        = {Simplizialzerlegungen von Beschrankter Flachheit},
@@ -302,7 +302,7 @@
 	file         = {Submitted Version:/home/nils/Zotero/storage/GL7IX74G/Papadimitriou - 1994 - On the complexity of the parity argument and other.pdf:application/pdf}
 }
 @article{sperner_neuer_1928,
-	title        = {Neuer beweis f\"{u}r die invarianz der dimensionszahl und des gebietes},
+	title        = {Neuer beweis für die invarianz der dimensionszahl und des gebietes},
 	author       = {Sperner, E.},
 	volume       = 6,
 	number       = 1,
@@ -312,28 +312,28 @@
 	url          = {http://link.springer.com/10.1007/BF02940617},
 	urldate      = {2024-04-18},
 	rights       = {http://www.springer.com/tdm},
-	journaltitle = {Abhandlungen aus dem Mathematischen Seminar der Universit\"{a}t Hamburg},
+	journaltitle = {Abhandlungen aus dem Mathematischen Seminar der Universität Hamburg},
 	shortjournal = {Abh.Math.Semin.Univ.Hambg.},
 	date         = {1928-12},
 	langid       = {german},
-	file         = {Sperner - 1928 - Neuer beweis f\"{u}r die invarianz der dimensionszahl .pdf:/home/nils/Zotero/storage/WJDDXGBJ/Sperner - 1928 - Neuer beweis f\"{u}r die invarianz der dimensionszahl .pdf:application/pdf}
+	file         = {Sperner - 1928 - Neuer beweis für die invarianz der dimensionszahl .pdf:/home/nils/Zotero/storage/WJDDXGBJ/Sperner - 1928 - Neuer beweis für die invarianz der dimensionszahl .pdf:application/pdf}
 }
 @book{aigner_proofs_2018,
 	title        = {Proofs from {THE} {BOOK}},
-	author       = {Aigner, Martin and Ziegler, G\"{u}nter M.},
+	author       = {Aigner, Martin and Ziegler, Günter M.},
 	location     = {Berlin, Heidelberg},
 	publisher    = {Springer Berlin Heidelberg : Imprint: Springer},
 	doi          = {10.1007/978-3-662-57265-8},
 	isbn         = {978-3-662-57265-8},
 	edition      = {6th ed. 2018},
-	abstract     = {This revised and enlarged sixth edition of Proofs from {THE} {BOOK} features an entirely new chapter on Van der Waerden's permanent conjecture, as well as additional, highly original and delightful proofs in other chapters. From the citation on the occasion of the 2018 "Steele Prize for Mathematical Exposition" "... It is almost impossible to write a mathematics book that can be read and enjoyed by people of all levels and backgrounds, yet Aigner and Ziegler accomplish this feat of exposition with virtuoso style. [...] This book does an invaluable service to mathematics, by illustrating for non-mathematicians what it is that mathematicians mean when they speak about beauty." From the Reviews "... Inside {PFTB} (Proofs from The Book) is indeed a glimpse of mathematical heaven, where clever insights and beautiful ideas combine in astonishing and glorious ways. There is vast wealth within its pages, one gem after another... Aigner and Ziegler... write: "... all we offer is the examples that we have selected, hoping that our readers will share our enthusiasm about brilliant ideas, clever insights and wonderful observations." I do... " Notices of the {AMS}, August 1999 "... This book is a pleasure to hold and to look at: ample margins, nice photos, instructive pictures and beautiful drawings ... It is a pleasure to read as well: the style is clear and entertaining, the level is close to elementary, the necessary background is given separately and the proofs are brilliant..." {LMS} Newsletter, January 1999 "Martin Aigner and G\"{u}nter Ziegler succeeded admirably in putting together a broad collection of theorems and their proofs that would undoubtedly be in the Book of Erd\"{o}s. The theorems are so fundamental, their proofs so elegant and the remaining open questions so intriguing that every mathematician, regardless of speciality, can benefit from reading this book... " {SIGACT} News, December 2011},
+	abstract     = {This revised and enlarged sixth edition of Proofs from {THE} {BOOK} features an entirely new chapter on Van der Waerden's permanent conjecture, as well as additional, highly original and delightful proofs in other chapters. From the citation on the occasion of the 2018 "Steele Prize for Mathematical Exposition" "... It is almost impossible to write a mathematics book that can be read and enjoyed by people of all levels and backgrounds, yet Aigner and Ziegler accomplish this feat of exposition with virtuoso style. [...] This book does an invaluable service to mathematics, by illustrating for non-mathematicians what it is that mathematicians mean when they speak about beauty." From the Reviews "... Inside {PFTB} (Proofs from The Book) is indeed a glimpse of mathematical heaven, where clever insights and beautiful ideas combine in astonishing and glorious ways. There is vast wealth within its pages, one gem after another... Aigner and Ziegler... write: "... all we offer is the examples that we have selected, hoping that our readers will share our enthusiasm about brilliant ideas, clever insights and wonderful observations." I do... " Notices of the {AMS}, August 1999 "... This book is a pleasure to hold and to look at: ample margins, nice photos, instructive pictures and beautiful drawings ... It is a pleasure to read as well: the style is clear and entertaining, the level is close to elementary, the necessary background is given separately and the proofs are brilliant..." {LMS} Newsletter, January 1999 "Martin Aigner and Günter Ziegler succeeded admirably in putting together a broad collection of theorems and their proofs that would undoubtedly be in the Book of Erdös. The theorems are so fundamental, their proofs so elegant and the remaining open questions so intriguing that every mathematician, regardless of speciality, can benefit from reading this book... " {SIGACT} News, December 2011},
 	pagetotal    = 1,
 	date         = 2018,
 	keywords     = {Analysis, Analysis (Mathematics), Combinatorics, Computer science-Mathematics, Geometry, Graph theory, Graph Theory, Mathematical analysis, Mathematics of Computing, Number theory, Number Theory},
-	file         = {Submitted Version:/home/nils/Zotero/storage/3IBMQ9RH/Aigner and Ziegler - 2018 - Proofs from THE BOOK.pdf:application/pdf;The\_Book\_of\_Proofs.pdf:/home/nils/Zotero/storage/WBBQ4URT/The\_Book\_of\_Proofs.pdf:application/pdf}
+	file         = {Submitted Version:/home/nils/Zotero/storage/3IBMQ9RH/Aigner and Ziegler - 2018 - Proofs from THE BOOK.pdf:application/pdf;The_Book_of_Proofs.pdf:/home/nils/Zotero/storage/WBBQ4URT/The_Book_of_Proofs.pdf:application/pdf}
 }
 @article{brouwer_uber_1911,
-	title        = {\"{U}ber Abbildung von Mannigfaltigkeiten},
+	title        = {Über Abbildung von Mannigfaltigkeiten},
 	author       = {Brouwer, L. E. J.},
 	volume       = 71,
 	number       = 1,
@@ -356,7 +356,7 @@
 	publisher    = {Cambridge university press},
 	isbn         = {978-0-521-79540-1},
 	date         = 2001,
-	file         = {Hatcher\_Algebraic\_Topology.pdf:/home/nils/Documents/Studies/ETH/Data\_Science\_Master/Master\_Thesis/Papers/Hatcher\_Algebraic\_Topology.pdf:application/pdf}
+	file         = {Hatcher_Algebraic_Topology.pdf:/home/nils/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Hatcher_Algebraic_Topology.pdf:application/pdf}
 }
 @book{munkres_elements_2018,
 	title        = {Elements of algebraic topology},
@@ -371,7 +371,7 @@
 }
 @misc{kaiser_criticality_2024,
 	title        = {Criticality in Sperner's Lemma},
-	author       = {Kaiser, Tom\'{a}\v{s} and Stehl\'{\i}k, Mat\v{e}j and \v{S}krekovski, Riste},
+	author       = {Kaiser, Tomáš and Stehlík, Matěj and Škrekovski, Riste},
 	number       = {{arXiv}:2301.03420},
 	url          = {http://arxiv.org/abs/2301.03420},
 	urldate      = {2024-06-22},
@@ -411,7 +411,7 @@
 }
 @article{fearnley_faster_2022,
 	title        = {A Faster Algorithm for Finding Tarski Fixed Points},
-	author       = {Fearnley, John and P\'{a}lv\"{o}lgyi, D\"{o}m\"{o}t\"{o}r and Savani, Rahul},
+	author       = {Fearnley, John and Pálvölgyi, Dömötör and Savani, Rahul},
 	volume       = 18,
 	number       = 3,
 	pages        = {1--23},
@@ -420,11 +420,11 @@
 	url          = {https://dl.acm.org/doi/10.1145/3524044},
 	urldate      = {2024-07-21},
 	abstract     = {
-		Dang et~al. have given an algorithm that can find a Tarski fixed point in a k -dimensional lattice of width n using O (log
+		Dang et al. have given an algorithm that can find a Tarski fixed point in a k -dimensional lattice of width n using O (log
 
 		k
 
-		n ) queries~[ 2 ]. Multiple authors have conjectured that this algorithm is optimal~[ 2 , 7 ], and indeed this has been proven for two-dimensional instances~[ 7 ]. We show that these conjectures are false in dimension three or higher by giving an O (log 2 n ) query algorithm for the three-dimensional Tarski problem. We also give a new decomposition theorem for k -dimensional Tarski problems which, in combination with our new algorithm for three dimensions, gives an O (log 2 \lceil{}k/3\rceil{} n ) query algorithm for the k -dimensional problem.
+		n ) queries [ 2 ]. Multiple authors have conjectured that this algorithm is optimal [ 2 , 7 ], and indeed this has been proven for two-dimensional instances [ 7 ]. We show that these conjectures are false in dimension three or higher by giving an O (log 2 n ) query algorithm for the three-dimensional Tarski problem. We also give a new decomposition theorem for k -dimensional Tarski problems which, in combination with our new algorithm for three dimensions, gives an O (log 2 ⌈k/3⌉ n ) query algorithm for the k -dimensional problem.
 	},
 	journaltitle = {{ACM} Transactions on Algorithms},
 	shortjournal = {{ACM} Trans. Algorithms},
@@ -443,12 +443,12 @@
 	issn         = {0004-5411, 1557-735X},
 	url          = {https://dl.acm.org/doi/10.1145/3568163},
 	urldate      = {2024-07-21},
-	abstract     = {We study search problems that can be solved by performing Gradient Descent on a bounded convex polytopal domain and show that this class is equal to the intersection of two well-known classes: {PPAD} and {PLS}. As our main underlying technical contribution, we show that computing a Karush-Kuhn-Tucker ({KKT}) point of a continuously differentiable function over the domain [0,1] 2 is {PPAD}~\cap{}~{PLS}-complete. This is the first non-artificial problem to be shown complete for this class. Our results also imply that the class {CLS} (Continuous Local Search) – which was defined by Daskalakis and Papadimitriou as a more ``natural'' counterpart to {PPAD}~\cap{}~{PLS} and contains many interesting problems – is itself equal to {PPAD}~\cap{}~{PLS}.},
+	abstract     = {We study search problems that can be solved by performing Gradient Descent on a bounded convex polytopal domain and show that this class is equal to the intersection of two well-known classes: {PPAD} and {PLS}. As our main underlying technical contribution, we show that computing a Karush-Kuhn-Tucker ({KKT}) point of a continuously differentiable function over the domain [0,1] 2 is {PPAD} ∩ {PLS}-complete. This is the first non-artificial problem to be shown complete for this class. Our results also imply that the class {CLS} (Continuous Local Search) – which was defined by Daskalakis and Papadimitriou as a more “natural” counterpart to {PPAD} ∩ {PLS} and contains many interesting problems – is itself equal to {PPAD} ∩ {PLS}.},
 	journaltitle = {Journal of the {ACM}},
 	shortjournal = {J. {ACM}},
 	date         = {2023-02-28},
 	langid       = {english},
-	file         = {Submitted Version:/home/nils/Zotero/storage/FW2N7WLV/Fearnley et al. - 2023 - The Complexity of Gradient Descent CLS = PPAD \cap{} P.pdf:application/pdf}
+	file         = {Submitted Version:/home/nils/Zotero/storage/FW2N7WLV/Fearnley et al. - 2023 - The Complexity of Gradient Descent CLS = PPAD ∩ P.pdf:application/pdf}
 }
 @book{arora_computational_2009,
 	title        = {Computational complexity : a modern approach},
@@ -477,7 +477,7 @@
 	editor       = {Nielsen, Mogens and Schmidt, Erik Meineche},
 	date         = 1982,
 	langid       = {english},
-	file         = {Sipser\_Relativisation.pdf:/home/nils/Dropbox/Documents/Studies/ETH/Data\_Science\_Master/Master\_Thesis/Papers/Sipser\_Relativisation.pdf:application/pdf}
+	file         = {Sipser_Relativisation.pdf:/home/nils/Dropbox/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Sipser_Relativisation.pdf:application/pdf}
 }
 @article{chen_reducing_2023,
 	title        = {Reducing Tarski to Unique Tarski (In the Black-Box Model)},
@@ -488,6 +488,7 @@
 	issn         = {1868-8969},
 	url          = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CCC.2023.21},
 	urldate      = {2024-07-30},
+	note         = {Artwork Size: 23 pages, 1766105 bytes {ISBN}: 9783959772822 Medium: application/pdf Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
 	rights       = {Creative Commons Attribution 4.0 International license, info:eu-repo/semantics/{openAccess}},
 	abstract     = {We study the problem of finding a Tarski fixed point over the k-dimensional grid [n]{\textasciicircum}k. We give a black-box reduction from the Tarski problem to the same problem with an additional promise that the input function has a unique fixed point. It implies that the Tarski problem and the unique Tarski problem have exactly the same query complexity. Our reduction is based on a novel notion of partial-information functions which we use to fool algorithms for the unique Tarski problem as if they were working on a monotone function with a unique fixed point.},
 	journaltitle = {{LIPIcs}, Volume 264, {CCC} 2023},
@@ -495,8 +496,8 @@
 	editoratype  = {collaborator},
 	date         = 2023,
 	langid       = {english},
-	keywords     = {Query complexity, Tarski fixed point, {TFNP}, Theory of computation \rightarrow{} Exact and approximate computation of equilibria, Theory of computation \rightarrow{} Problems, reductions and completeness},
-	file         = {Chen\_tarski\_to\_unique\_tarski.pdf:/home/nils/Dropbox/Documents/Studies/ETH/Data\_Science\_Master/Master\_Thesis/Papers/Chen\_tarski\_to\_unique\_tarski.pdf:application/pdf}
+	keywords     = {Query complexity, Tarski fixed point, {TFNP}, Theory of computation → Exact and approximate computation of equilibria, Theory of computation → Problems, reductions and completeness},
+	file         = {Chen_tarski_to_unique_tarski.pdf:/home/nils/Dropbox/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Chen_tarski_to_unique_tarski.pdf:application/pdf}
 }
 @inproceedings{chen_improved_2022,
 	title        = {Improved Upper Bounds for Finding Tarski Fixed Points},
@@ -516,7 +517,7 @@
 }
 @article{gartner_subexponential_2021,
 	title        = {A subexponential algorithm for {ARRIVAL}},
-	author       = {G\"{a}rtner, Bernd and Haslebacher, Sebastian and Hoang, Hung P.},
+	author       = {Gärtner, Bernd and Haslebacher, Sebastian and Hoang, Hung P.},
 	pages        = {14 p.},
 	doi          = {10.3929/ETHZ-B-000507056},
 	url          = {http://hdl.handle.net/20.500.11850/507056},
@@ -596,7 +597,7 @@
 }
 @inproceedings{papadimitriou_complexity_1990,
 	title        = {On the complexity of local search},
-	author       = {Papadimitriou, C. H. and Sch\"{a}ffer, A. A. and Yannakakis, M.},
+	author       = {Papadimitriou, C. H. and Schäffer, A. A. and Yannakakis, M.},
 	booktitle    = {Proceedings of the twenty-second annual {ACM} symposium on Theory of computing  - {STOC} '90},
 	location     = {Baltimore, Maryland, United States},
 	publisher    = {{ACM} Press},
@@ -627,21 +628,31 @@
 }
 @article{arteche_proof_2024,
 	title        = {From Proof Complexity to Circuit Complexity via Interactive Protocols},
-	author       = {Arteche, Noel and Khaniki, Erfan and Pich, J\'{a}n and Santhanam, Rahul},
+	author       = {Arteche, Noel and Khaniki, Erfan and Pich, Ján and Santhanam, Rahul},
 	volume       = 297,
 	pages        = {12:1--12:20},
 	doi          = {10.4230/LIPICS.ICALP.2024.12},
 	issn         = {1868-8969},
 	url          = {https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.ICALP.2024.12},
 	urldate      = {2024-08-30},
-	note         = {Artwork Size: 20 pages, 920214 bytes {ISBN}: 9783959773225 Medium: application/pdf Publisher: Schloss Dagstuhl – Leibniz-Zentrum f\"{u}r Informatik},
+	note         = {Artwork Size: 20 pages, 920214 bytes {ISBN}: 9783959773225 Medium: application/pdf Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
 	rights       = {Creative Commons Attribution 4.0 International license, info:eu-repo/semantics/{openAccess}},
-	abstract     = {Folklore in complexity theory suspects that circuit lower bounds against {NC}\ensuremath{^1} or P/poly, currently out of reach, are a necessary step towards proving strong proof complexity lower bounds for systems like Frege or Extended Frege. Establishing such a connection formally, however, is already daunting, as it would imply the breakthrough separation {NEXP} \not\subseteq{} P/poly, as recently observed by Pich and Santhanam [Pich and Santhanam, 2023]. We show such a connection conditionally for the Implicit Extended Frege proof system ({iEF}) introduced by Kraj\'{\i}\v{c}ek [Kraj\'{\i}\v{c}ek, 2004], capable of formalizing most of contemporary complexity theory. In particular, we show that if {iEF} proves efficiently the standard derandomization assumption that a concrete Boolean function is hard on average for subexponential-size circuits, then any superpolynomial lower bound on the length of {iEF} proofs implies \#P \not\subseteq{} {FP}/poly (which would in turn imply, for example, {PSPACE} \not\subseteq{} P/poly). Our proof exploits the formalization inside {iEF} of the soundness of the sum-check protocol of Lund, Fortnow, Karloff, and Nisan [Lund et al., 1992]. This has consequences for the self-provability of circuit upper bounds in {iEF}. Interestingly, further improving our result seems to require progress in constructing interactive proof systems with more efficient provers.},
+	abstract     = {Folklore in complexity theory suspects that circuit lower bounds against {NC}¹ or P/poly, currently out of reach, are a necessary step towards proving strong proof complexity lower bounds for systems like Frege or Extended Frege. Establishing such a connection formally, however, is already daunting, as it would imply the breakthrough separation {NEXP} ⊈ P/poly, as recently observed by Pich and Santhanam [Pich and Santhanam, 2023]. We show such a connection conditionally for the Implicit Extended Frege proof system ({iEF}) introduced by Krajíček [Krajíček, 2004], capable of formalizing most of contemporary complexity theory. In particular, we show that if {iEF} proves efficiently the standard derandomization assumption that a concrete Boolean function is hard on average for subexponential-size circuits, then any superpolynomial lower bound on the length of {iEF} proofs implies \#P ⊈ {FP}/poly (which would in turn imply, for example, {PSPACE} ⊈ P/poly). Our proof exploits the formalization inside {iEF} of the soundness of the sum-check protocol of Lund, Fortnow, Karloff, and Nisan [Lund et al., 1992]. This has consequences for the self-provability of circuit upper bounds in {iEF}. Interestingly, further improving our result seems to require progress in constructing interactive proof systems with more efficient provers.},
 	journaltitle = {{LIPIcs}, Volume 297, {ICALP} 2024},
 	editora      = {Bringmann, Karl and Grohe, Martin and Puppis, Gabriele and Svensson, Ola},
 	editoratype  = {collaborator},
 	date         = 2024,
 	langid       = {english},
-	keywords     = {circuit complexity, interactive protocols, proof complexity, Theory of computation \rightarrow{} Circuit complexity, Theory of computation \rightarrow{} Complexity theory and logic, Theory of computation \rightarrow{} Proof complexity},
-	file         = {Arteche\_Proof\_Complexity:/home/nils/Dropbox/Documents/Studies/ETH/Data\_Science\_Master/Master\_Thesis/Papers/Arteche\_Proof\_Complexity.pdf:application/pdf}
+	keywords     = {circuit complexity, interactive protocols, proof complexity, Theory of computation → Circuit complexity, Theory of computation → Complexity theory and logic, Theory of computation → Proof complexity},
+	file         = {Arteche_Proof_Complexity:/home/nils/Dropbox/Documents/Studies/ETH/Data_Science_Master/Master_Thesis/Papers/Arteche_Proof_Complexity.pdf:application/pdf}
+}
+@book{waerden_algebra_2003,
+	title        = {Algebra. 1},
+	author       = {Waerden, Bartel L. van der and Artin, Emil and Noether, Emmy},
+	location     = {New York, {NY} Berlin Heidelberg},
+	publisher    = {Springer},
+	isbn         = {978-0-387-40624-4},
+	edition      = {1. softcover print},
+	pagetotal    = 265,
+	date         = 2003
 }
