Make headers red

--- a/styling/kao.sty
+++ b/styling/kao.sty
@@ -264,15 +264,15 @@
 
 % Header style with chapter number, chapter title, and page in the header (used throughout the document)
 \renewpagestyle{scrheadings}{%
-	{\smash{\hspace{-\headmarginparwidth}\hspace{-\headmarginparsep}\makebox[\headtotal][l]{%
+	{\color{Maroon}\smash{\hspace{-\headmarginparwidth}\hspace{-\headmarginparsep}\makebox[\headtotal][l]{%
 					\makebox[7\hscale][r]{\thepage}%
 					\makebox[3\hscale]{}\rule[-1mm]{0.5pt}{19\vscale-1mm}\makebox[3\hscale]{}%
 					\makebox[\headtextwidth][l]{\leftmark}}}}%
-		{\smash{\makebox[0pt][l]{\makebox[\headtotal][r]{%
+		{\color{Maroon}\smash{\makebox[0pt][l]{\makebox[\headtotal][r]{%
 						\makebox[\headtextwidth][r]{\hfill\rightmark}%
 						\makebox[3\hscale]{}\rule[-1mm]{0.5pt}{19\vscale-1mm}\makebox[3\hscale]{}%
 						\makebox[7\hscale][l]{\thepage}}}}}%
-		{\smash{\makebox[0pt][l]{\makebox[\headtotal][r]{%
+		{\color{Maroon}\smash{\makebox[0pt][l]{\makebox[\headtotal][r]{%
 						\makebox[\headtextwidth][r]{\hfill\rightmark}%
 						\makebox[3\hscale]{}\rule[-1mm]{0.5pt}{19\vscale-1mm}\makebox[3\hscale]{}%
 						\makebox[7\hscale][l]{\thepage}}}}}%
