Sebastian's proofreading of Abstract

--- a/content/abstract.tex
+++ b/content/abstract.tex
@@ -1,3 +1,7 @@
 \chapter*{Abstract}
 
-This thesis investigates the computational complexity of the Tarski fixed-point problem within the \TFNP\ framework of total search problems. Specifically, it explores the \Tarski\ problem's place within \TFNP's subclasses, in particular within \PPAD, \PLS, and \EOPL\@. It aims to understand why \Tarski\ lies in \EOPL\ and to construct a reduction from \Tarski\ to the \EndOfPotentialLine\ problem. This will ultimately not be achieved, but the thesis achieves a novel reduction from \Tarski\ to \EndOfLine\ using Sperner's Lemma instead of Brouwer's fixed-point theorem. Doing this, we give complete proof that \Sperner\ is in \PPAD\@. The thesis also comprehensively overviews the \TFNP-landscape and its subclasses. Furthermore, the thesis studies the structure of \Tarski-instances and gives directions for further research towards finding a direct reduction from \Tarski\ to \EndOfPotentialLine\@.
+In this thesis we investigate the computational complexity of finding a Tarski fixed-point within the \TFNP\ framework of total search problems. Tarski's theorem states that a monotone function on a complete lattice has a fixed-point. These fixed points are equilibria of certain problems in economics, and appear in numerous computational problems. The \Tarski\ problem is the task of finding such a fixed point for a given function. 
+
+Specifically, we explore the \Tarski\ problem's place within \TFNP's subclasses, in particular within \PPAD, \PLS, and \EOPL\@. It is known that \Tarski\ lies in \EOPL\ by chaining recent results together, however a direct reduction from \Tarski\ to an \EOPL-complete problem has not been explicitly described.
+
+We aim to understand why \Tarski\ lies in \EOPL\ and to construct a reduction from \Tarski\ to the \EndOfPotentialLine\ problem. This will ultimately not be achieved, but the thesis achieves a novel reduction from \Tarski\ to \EndOfLine\ using Sperner's Lemma instead of Brouwer's fixed-point theorem. Doing this, we give a clear and detailed  presentation of the existing proof that \Sperner\ is in \PPAD\@. Furthermore, the thesis studies the structure of \Tarski-instances and gives directions for further research towards finding a direct reduction from \Tarski\ to \EndOfPotentialLine\@.
